--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       - 8501:8501
     volumes:
       - $HOME/.aws/credentials:/home/appuser/.aws/credentials:ro
+    env_file:
+      - ./.aws-credentials
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
