--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
     volumes:
       - $HOME/.aws/credentials:/home/appuser/.aws/credentials:ro
     env_file:
-      - ./.aws-credentials
+      - /home/appuser/.aws/credentials
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
